k8/platform/garage/s3-manager/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s3-manager
  namespace: garage
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: s3-manager
  template:
    metadata:
      labels:
        app.kubernetes.io/name: s3-manager
    spec:
      imagePullSecrets:
        - name: artifact-keeper-pull
      containers:
        - name: s3-manager
          image: artifactory.cfapps.cool/docker-local/cloudlena/s3manager:latest-arm64
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
