k8/platform/garage/s3-manager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s3-manager
  namespace: garage
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: s3-manager
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
