k8/platform/garage/s3-manager/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: s3-manager
  namespace: garage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`s3-manager.development.cfapps.cool`)
      kind: Rule
      services:
        - name: s3-manager
          port: 8080
  tls: {}
